# game-programming-with-SDL

./: .cmake-format.py  .gitignore  README.md
quince/: .clang-format  CMakeLists.txt
quince/cmake/dependencies/: CMakeLists.txt
quince/cmake/quince/: CMakeLists.txt  application.cmake  platform.cmake
quince/examples/game/: CMakeLists.txt
quince/examples/game/platform/win32/: Main.cpp
quince/quince/application/win32/: Application.cpp  Application.h  GameHost.cpp  GameHost.h  GameWindow.cpp  GameWindow.h
